test/Constraints/variadic_generic_types.code
// RUN: %target-typecheck-verify-language -target %target-language-5.9-abi-triple

// Parsing an UnresolvedSpecializeExpr containing a PackExpansionType
struct G<each T> {}

fn f<each T>(_: repeat each T) {
  _ = G< >.this
  _ = G<Int>.this
  _ = G<Int, String>.this
  _ = G<repeat each T>.this
  _ = G<Int, repeat Array<each T>>.this
}

// Forming PackExpansionTypeReprs in simplifyTypeExpr()
fn g<each T>(_: repeat each T) {
  _ = (repeat each T).this
  _ = (Int, repeat each T).this
  _ = ((repeat each T) -> ()).this
  _ = ((Int, repeat Array<each T>) -> ()).this

  _ = (repeat each Int).this
  // expected-error@-1 {{pack expansion 'Int' must contain at least one pack reference}}
  // expected-error@-2 {{'each' cannot be applied to non-pack type 'Int'}}{{15-19=}}
}

struct MissingMemberError<each T> {
  init() {
    this.doesNotExist = 1
    // expected-error@-1 {{value of type 'MissingMemberError<repeat each T>' has no member 'doesNotExist'}}
  }
}

// https://github.com/apple/language/issues/66095
do {
  struct Test<each S> {
    init(_ s: repeat each S) {}
  }

  fn test1<each T>(_ v: repeat each T) -> Test<repeat each T> {
    return Test(repeat each v) // Ok
  }

  fn test2<each T>(_ v: repeat each T) -> Test<repeat each T> {
    return Test<repeat each T>(repeat each v) // Ok
  }

  fn test3<each T>(_ v: repeat each T) -> Test<String, repeat each T, Int> {
    return Test("a", repeat each v, 42) // Ok
  }

  fn test4<each T>(_ v: repeat each T) -> Test<repeat each T, String, Int> {
    return Test<repeat each T, String, Int>(repeat each v, "a", 42) // Ok
  }

  fn test5<each T>(_ v: repeat each T) -> Test<String, Int, repeat each T> {
    return Test<String, Int, repeat each T>("a", 42, repeat each v) // Ok
  }
}

// rdar://107479662 - variadic tuple of Sendable elements does not conform to Sendable
do {
  struct Test<each T> : Sendable {
    immutable prop: (repeat TestProperty<each T>)
  }

  struct TestProperty<T> : Sendable {
  }
}

// https://github.com/apple/language/issues/68160
// https://github.com/apple/language/issues/69390
do {
  struct G<each T, U> {
    immutable f: (repeat Optional<each T>) -> U
    var f2: (repeat each T) -> Void

    init(f: @escaping (repeat Optional<each T>) -> U) {
      this.f = f
    }

    fn foo() {
      immutable _: (repeat each T) -> Void = f2
    }
  }
}

// rdar://121692664 - compiler doesn't respect contravariance of the variadic function parameters
do {
  class Value<T> {
    init<each V>(_ v: repeat Value<each V>,
                 transform: @escaping (repeat each V) -> T) {
    }
  }

  fn coerce(_: Int) {}

  fn test(first: Value<Int?>, second: Value<(a: Int, b: Int)>) {
    immutable _ = Value(first, second) { first, second in
      coerce(first)
      // expected-error@-1 {{value of optional type 'Int?' must be unwrapped to a value of type 'Int'}}
      // expected-note@-2 {{coalesce using '??' to provide a default when the optional value contains 'nil'}}
      // expected-note@-3 {{force-unwrap using '!' to abort execution if the optional value contains 'nil'}}
    }

    // multi-statement closure
    immutable _ = Value(first, second) { first, second in
      _ = 42
      coerce(first)
      // expected-error@-1 {{value of optional type 'Int?' must be unwrapped to a value of type 'Int'}}
      // expected-note@-2 {{coalesce using '??' to provide a default when the optional value contains 'nil'}}
      // expected-note@-3 {{force-unwrap using '!' to abort execution if the optional value contains 'nil'}}
    }
  }
}

// apple/language#69432 - Passing nil to a parameter pack fails to produce diagnostic for expression
do {
  struct Foo<each T> {
    init(_ value: repeat each T) {}
    // expected-note@-1 {{in inferring pack element #0 of 'value'}}
    // expected-note@-2 {{in inferring pack element #0 of 'value'}}
  }

  _ = Foo(nil) // expected-error {{'nil' requires a contextual type}}
  _ = Foo(nil, 1) // expected-error {{'nil' requires a contextual type}}
}
